--- a/style.css
+++ b/style.css
@@ -11,7 +11,16 @@ body {
 
 .container {
   margin: 0 auto;
-  width: fit-content;
+  padding: 10px;
+  width: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  /* background-color: #000;
+  color: #fff; */
 }
 
 .data {
@@ -21,13 +30,19 @@ body {
 .img {
   display: flex;
   align-items: center;
-  /* justify-content: center; */
-  height: 50px;
+  justify-content: center;
+  height: 100px;
   width: 100px;
-  /* overflow: hidden; */
+  border: 1px dashed #000;
+  overflow: hidden;
+  border-radius: 50%;
 }
 
 img {
   height: 100%;
   width: 100%;
+}
+
+a {
+  color: #000;
 }
