--- a/style.css
+++ b/style.css
@@ -45,4 +45,12 @@ img {
 
 a {
   color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    min-width: 50%;
+  }
 }
