--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ a {
   cursor: pointer;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
   .container {
-    min-width: 50%;
+    width: 100%;
   }
 }
